# server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docs.md  example.env  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml
docs/: architecture.md  authentication.md  configuration.md  database.md  index.md  security.md
docs/api/: auth.md
src/: main.py
src/core/: db.py  models.py  passwords.py  seed.py  settings.py
src/v1/auth/: auth_router.py  dependencies.py
src/v1/me/: me_router.py
src/v1/sync/: __init__.py  sync_router.py
tests/: README.md  conftest.py  test_auth_dependency.py  test_sync_router.py
