[project]
name = "pyta-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.3",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.6",
]
