[project]
name = "pyta-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.121.3",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.6",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.2",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # pep8-naming
    "I",  # isort
    "PT", # flake8-pytest-style
    "Q",  # flake8-quotes
    "RET",# flake8-return
    "SIM",# flake8-simplify
    "T10",# flake8-debugger
    "TID",# flake8-tidy-imports
    "UP", # pyupgrade
    "ARG",# flake8-unused-arguments
    "PERF",# perflint
    "RUF",# Ruff-specific checks
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/dependencies.py" = ["B008"]  # FastAPI uses Depends() in defaults
"**/sync_router.py" = ["B008"]  # FastAPI uses Depends() in defaults
"tests/**" = ["ARG002", "PT019"]  # Pytest fixtures may have unused args

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src"]
ignore = ["**/__pycache__", "**/.venv", "**/.ruff_cache"]
reportMissingTypeStubs = "warning"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportUnknownArgumentType = "error"
reportUnknownParameterType = "error"
reportUnknownLambdaType = "error"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true
